source/blender/nodes/composite/nodes/node_composite_common.c
@@ -59,6 +59,14 @@ void register_node_type_cmp_group(void)
 
 void register_node_type_cmp_custom_group(bNodeType *ntype)
 {
-	ntype->insert_link = node_insert_link_default;
-	ntype->update_internal_links = node_update_internal_links_default;
+	/* These methods can be overriden but need a default implementation otherwise. */
+	if (ntype->poll == NULL) {
+		ntype->poll = cmp_node_poll_default;
+	}
+	if (ntype->insert_link == NULL) {
+		ntype->insert_link = node_insert_link_default;
+	}
+	if (ntype->update_internal_links == NULL) {
+		ntype->update_internal_links = node_update_internal_links_default;
+	}
 }
